--- a/contract/templates/contratos/contrato_form.html
+++ b/contract/templates/contratos/contrato_form.html
@@ -4,10 +4,13 @@
 <div class="container">
     <div class="page-inner">
         <div class="row justify-content-center">
-            <div class="col-lg-10">
+            <div class="col-md-12">
                 <div class="card">
-                    <div class="card-header bg-primary text-white text-center">
-                        <h4 class="card-title mb-0">{% if form.instance.pk %}Editar{% else %}Adicionar{% endif %} Contrato</h4>
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h4 class="card-title">{% if form.instance.pk %}Editar Contrato{% else %}Adicionar Contrato{% endif %}</h4>
+                        <a href="{% url 'contrato-list' %}" class="btn btn-danger btn-sm">
+                            <i class="fas fa-times"></i> Cancelar
+                        </a>
                     </div>
                     <div class="card-body">
                         <form method="post">
@@ -42,9 +45,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-action mt-3">
-                                <button type="submit" class="btn btn-success w-100">{% if form.instance.pk %}Salvar{% else %}Adicionar{% endif %}</button>
-                                <a href="{% url 'contrato-list' %}" class="btn btn-danger w-100 mt-2">Cancelar</a>
+                            <div class="card-action mt-3 d-flex justify-content-between">
+                                <button type="submit" class="btn btn-success">
+                                    <i class="fas fa-save"></i> {% if form.instance.pk %}Salvar{% else %}Adicionar{% endif %}
+                                </button>
+                                <a href="{% url 'contrato-list' %}" class="btn btn-secondary">
+                                    <i class="fas fa-arrow-left"></i> Voltar
+                                </a>
                             </div>
                         </form>
                     </div>
