--- a/contract/templates/contratos/contrato_form.html
+++ b/contract/templates/contratos/contrato_form.html
@@ -8,9 +8,7 @@
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h4 class="card-title">{% if form.instance.pk %}Editar Contrato{% else %}Adicionar Contrato{% endif %}</h4>
-                        <a href="{% url 'contrato-list' %}" class="btn btn-danger btn-sm">
-                            <i class="fas fa-times"></i> Cancelar
-                        </a>
+                        
                     </div>
                     <div class="card-body">
                         <form method="post">
@@ -45,14 +43,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-action mt-3 d-flex justify-content-between">
-                                <button type="submit" class="btn btn-success">
-                                    <i class="fas fa-save"></i> {% if form.instance.pk %}Salvar{% else %}Adicionar{% endif %}
-                                </button>
-                                <a href="{% url 'contrato-list' %}" class="btn btn-secondary">
-                                    <i class="fas fa-arrow-left"></i> Voltar
-                                </a>
+                            <div class="form-group text-center mt-4 d-flex justify-content-left">
+                                <button type="submit" class="btn btn-success mx-2 w-40">Salvar</button>
+                                <a href="{% url 'contrato-list' %}" class="btn btn-danger mx-2 w-40">Cancelar</a>
                             </div>
+                            
+                                                     
                         </form>
                     </div>
                 </div>
