--- a/templates/index.html
+++ b/templates/index.html
@@ -271,7 +271,7 @@
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#charts">
                   <i class="far fa-chart-bar"></i>
-                  <p>Remanejamento</p>
+                  <p>Remanejamentos</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="charts">
