--- a/templates/index.html
+++ b/templates/index.html
@@ -160,6 +160,21 @@
                         <span class="sub-item">Listar Setores</span>
                       </a>
                     </li>
+                    <li>
+                      <a href="{% url 'direcao_list' %}">
+                        <span class="sub-item">Direções</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="{% url 'gerencia_list' %}">
+                        <span class="sub-item">Gerências</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="{% url 'coordenacao_list' %}">
+                        <span class="sub-item">Coordenações</span>
+                      </a>
+                    </li>
                     
                   </ul>
                 </div>
