--- a/contract/templates/setores/coordenacao_form.html
+++ b/contract/templates/setores/coordenacao_form.html
@@ -4,26 +4,24 @@
 <div class="container">
     <div class="page-inner">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <div class="card">
-                    <div class="card-header bg-primary text-white">
-                        <h4 class="card-title text-center">Cadastro de Coordenação</h4>
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h4 class="card-title">{% if form.instance.pk %}Editar Coordenação{% else %}Adicionar Coordenação{% endif %}</h4>
                     </div>
                     <div class="card-body">
                         <form method="post">
                             {% csrf_token %}
-                            <div class="form-row">
-                                <div class="form-group col-md-12">
-                                    {{ form.as_p }}
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        {{ form.as_p }}
+                                    </div>
                                 </div>
                             </div>
-                            <div class="form-row mt-3">
-                                <div class="form-group col-md-6">
-                                    <button type="submit" class="btn btn-success btn-block">Salvar</button>
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <a href="{% url 'coordenacao_list' %}" class="btn btn-secondary btn-block">Cancelar</a>
-                                </div>
+                            <div class="form-group text-center mt-4 d-flex justify-content-left">
+                                <button type="submit" class="btn btn-success mx-2 w-40">Salvar</button>
+                                <a href="{% url 'coordenacao_list' %}" class="btn btn-danger mx-2 w-40">Cancelar</a>
                             </div>
                         </form>
                     </div>
@@ -33,3 +31,23 @@
     </div>
 </div>
 {% endblock %}
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+    var dropdowns = document.getElementsByClassName("dropdown-btn");
+    var i;
+
+    for (i = 0; i < dropdowns.length; i++) {
+        dropdowns[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var dropdownContent = this.nextElementSibling;
+            if (dropdownContent.style.display === "block") {
+                dropdownContent.style.display = "none";
+            } else {
+                dropdownContent.style.display = "block";
+            }
+        });
+    }
+</script>
