ajuste em colboradores

--- a/templates/index.html
+++ b/templates/index.html
@@ -185,24 +185,16 @@
                   <ul class="nav nav-collapse">
                     <li>
                       <a href="{% url 'centrodecustogestor_list' %}">                      
-                        <span class="sub-item">Listar Centros de Custo Gestor</span>
+                        <span class="sub-item">Centros de Custo Gestor</span>
                       </a>
                     </li> 
-                    <li>
-                      <a href="{% url 'centrodecustogestor_create' %}">
-                        <span class="sub-item">Adicionar Centro de Custo Gestor</span>
-                      </a>
-                    </li>
+                    
                     <li>
                       <a href="{% url 'centrodecustosolicitante_list' %}">                      
-                        <span class="sub-item">Listar Centros de Custo Solicitante</span>
+                        <span class="sub-item">Centros de Custo Solicitante</span>
                       </a>
                     </li> 
-                    <li>
-                      <a href="{% url 'centrodecustosolicitante_create' %}">
-                        <span class="sub-item">Adicionar Centro de Custo Solicitante</span>
-                      </a>
-                    </li>                     
+                                       
                   </ul>
                 </div>
               </li>
