--- a/contract/templates/colaborador/colaborador_form.html
+++ b/contract/templates/colaborador/colaborador_form.html
@@ -2,29 +2,61 @@
 
 {% block 'conteudo' %}
 <div class="container">
-    <div class="row justify-content-center">
-        <div class="col-lg-8">
-            <div class="card mt-4">
-                <div class="card-header bg-primary text-white text-center">
-                    <h4 class="card-title mb-0">
-                        {% if view.object.pk %}
-                            Editar Colaborador
-                        {% else %}
-                            Adicionar Novo Colaborador
-                        {% endif %}
-                    </h4>
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <div class="text-center mt-4">
-                            <button type="submit" class="btn btn-success">
-                                {% if view.object.pk %}Atualizar{% else %}Cadastrar{% endif %}
-                            </button>
-                            <a href="{% url 'colaborador_list' %}" class="btn btn-secondary">Cancelar</a>
-                        </div>
-                    </form>
+    <div class="page-inner">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h4 class="card-title">{% if form.instance.pk %}Editar Colaborador{% else %}Adicionar Colaborador{% endif %}</h4>
+                    </div>
+                    <div class="card-body">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        {{ form.nome_completo.label_tag }} {{ form.nome_completo }}
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        {{ form.mat.label_tag }} {{ form.mat }}
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        {{ form.ramal.label_tag }} {{ form.ramal }}
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        {{ form.email.label_tag }} {{ form.email }}
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        {{ form.direcao.label_tag }} {{ form.direcao }}
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        {{ form.gerencia.label_tag }} {{ form.gerencia }}
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        {{ form.coordenacao.label_tag }} {{ form.coordenacao }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group text-center mt-4 d-flex justify-content-left">
+                                <button type="submit" class="btn btn-success mx-2 w-40">
+                                    {% if form.instance.pk %}Atualizar{% else %}Cadastrar{% endif %}
+                                </button>
+                                <a href="{% url 'colaborador_list' %}" class="btn btn-danger mx-2 w-40">Cancelar</a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
